Reuse semantic and navigation state through full revalidation